--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             <img src="img/obj_main_3.png" class="main_img" alt="">
               
           </div>
-          <div class="col-lg-5 col-md-7 col-sm-12 text-block">
-            <h1>Keep mining<br> while the sun<br> is high</h1>
+          <div class="col-lg-5 col-md-7 col-sm-12 text-block" style="margin-top: 30px;">
+            <h1>Rising the<br>mining level</h1>
             <button class="yellow-button" onclick="location.href='#contact-us';">Start mining</button>
           </div>
         </div>
@@ -106,7 +106,8 @@
         <h2>about us</h2>
         <div class="row text-block">
         <div class="col-lg-6 col-md-6 col-sm-12 first-text-block">
-          <p >Altyn pool was created by the Kazakhstan mining community. We have a precise understanding of network decentralization importance, as well as realization that Kazakhstan is becoming a key mining region and local pool should bring the industry to a new level.</p>
+          <p >
+            Altyn pool was created by the miners community. We have a precise understanding of network decentralization importance, as well as the realization that Kazakhstan is becoming a key region in mining. Local pool should take the industry to the new level and provide miners from all over the world with easy access to the key advantages of the region.</p>
           <p>We are engaged not only in mining, but also in software development in the field of mining and cryptocurrencies. We do not intend to rest on our accomplishments and are constantly working to improve our products.</p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 second-text-block">
@@ -128,22 +129,9 @@
                 </p>
                <div class="middle-line "></div>
               </div>
-              <p class="card-content">We provide consulting services for miners, data centers and investors. We will help to find the best solution for any of your requests. Thanks to the large network, we can always find the necessary competencies.</p>
+              <p class="card-content">We provide consulting services for miners, data centers and investors. We will help to find the best solution for any of your requests and we will also assist in finding investors and attracting miners to your data center. Thanks to the large network, we can always find the necessary competencies.</p>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12">
-            <div class="text-card">
-              <div class="card-head">
-                <p>
-                  Firmware
-                </p>
-               <div class="middle-line "></div>
-              </div>
-              <p class="card-content">We develop unique firmware configurations for the most popular ASICs in order to improve mining efficiency and reduce electricity and maintenance costs. Our team can create a firmware that will meet your request exactly.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
@@ -152,15 +140,28 @@
                 </p>
                <div class="middle-line "></div>
               </div>
+              <p class="card-content">Our qualified team uses the world's best solutions to ensure stable work and high like-rate. A wide network of servers around the world, including in Kazakhstan, as well as round-the-clock support will increase not only profit, but usability also.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="text-card">
+              <div class="card-head">
+                <p>
+                  Firmware
+                </p>
+               <div class="middle-line "></div>
+              </div>
 
-              <p class="card-content">Our qualified team uses the world's best solutions to ensure stable work and high like-rate. Servers in Kazakhstan and round-the-clock support will increase not profit only, but usability also.</p>
+              <p class="card-content">We develop unique firmware configurations for the most popular ASICs in order to improve mining efficiency and reduce electricity and maintenance costs. Our team can create a firmware that will meet your request exactly.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
                 <p>
-                  Facilities in Kazakhstan
+                  Mining farms
                 </p>
                <div class="middle-line "></div>
               </div>
@@ -184,8 +185,7 @@
               </div>
 
               <p class="card-content">
-                Altyn pool allows mining of three main leading currencies: BTC, LTC and ETH.
-                We are constantly analyzing the mining market to further increase the number of available coins.</p>
+                Altyn pool supports the main mining algorithms: SHA-256, Scrypt and Equihash. We are constantly analyzing the mining market to further increase the number of available coins.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
@@ -197,7 +197,7 @@
                <div class="middle-line "></div>
               </div>
               <p class="card-content">
-                Merged mining allows two or more cryptocurrencies to be mined at the same time without compromising overall mining. LTC + DOGE merged mining is available at the moment.
+                Merged mining allows two or more cryptocurrencies to be mined at the same time without compromising overall mining.
               </p>
             </div>
           </div>
@@ -212,7 +212,7 @@
                <div class="middle-line "></div>
               </div>
               <p class="card-content">
-                Our pool supports the most reliable payment methods: FPPS and PPLNS and also provides the option of automatic payments once a day with an adjustable withdrawal threshold.
+                Altyn Pool supports the most reliable payment methods: FPPS and PPLNS and also provides the option of automatic payments once a day with an adjustable withdrawal threshold.
               </p>
             </div>
           </div>
@@ -225,7 +225,7 @@
                <div class="middle-line "></div>
               </div>
               <p class="card-content">
-                As a support for our clients from Kazakhstan, we set zero mining fees. Our pool does not charge any fees from Kazakh miners.</p>
+                As a support for our clients from Kazakhstan, we set zero mining fees. Our pool does not charge any fees from Kazakh miners. To get special conditions, leave a request through the <a href="#contact-us">form below</a>.</p>
             </div>
           </div>
         </div>
@@ -322,9 +322,9 @@
           <div class="col-lg-4 col-md-4 col-sm-12">
             <!-- <img src="img/circle.svg" class="footer_circle_img" width="4%" style="padding-bottom: 14px;" alt=""> -->
             <a class="navbar-brand" href="#"><img src="img/circle.svg" width="27px" alt=""> altyn pool</a>
-            <p class="footer-description">Altyn pool official </p>
+            <p class="footer-description">Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official </p>
           </div>
-          <div class="col-lg-8 col-md-8 col-sm-12 footer-menu">
+          <div class="col-lg-8 col-md-8 col-sm-12 footer-menu" >
             <div class="row" >
               <div class="col-lg-4 col-md-4 col-sm-12 first-footer-nav">
                 <div class="column-one">
