--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
               <p class="card-content">Our value is our customers. We provide a whole range of services and privileges for large miners. For ease of use, a personal manager will be with you 24/7.</p>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <!-- <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
                 <p>
@@ -253,7 +253,7 @@
                 Integrated P2P platform allows automatic exchange of altcoins in BTC and USDT. Our P2P is an absolutely legal service with round-the-clock support, we use reliable wallets of the reputable BitGo
               </p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -345,7 +345,7 @@
               <div class="col-lg-3 col-md-3 col-sm-12 second-footer-nav">
                 <div class="column-one">
                   <p class="menu-header">Social</p>
-                  <a href="">Telegram</a>
+                  <a href="https://t.me/altynpool" target="__blank">Telegram</a>
                   <a href="">Facebook</a>
                   <a href="">Twitter</a>
                   <!-- <a href="">Medium</a> -->
@@ -367,9 +367,9 @@
             </div>            
               <div class="col-lg-5 col-md-5 col-sm-12 third-footer-nav">
                 <p class="menu-header">Contacts</p>
-                <div class="email-block"><p>For press: </p> <a href="">press@altynpool.com</a></div>
-                <div class="email-block"><p>Tech support: </p> <a href="">support@altynpool.com</a></div>
-                <div class="email-block"><p>For data-centers: </p> <a href="">dc@altynpool.com</a></div>
+                <div class="email-block"><p>For press: </p> <a href="mailto:press@altynpool.com" target="__blank">press@altynpool.com</a></div>
+                <div class="email-block"><p>Tech support: </p> <a href="mail:support@altynpool.com" target="__blank">support@altynpool.com</a></div>
+                <div class="email-block"><p>For data centers: </p> <a href="mail:support@altynpool.com" target="__blank">hosting@altynpool.com</a></div>
               </div>
             </div>
             </div>
