--- a/ru/main.html
+++ b/ru/main.html
@@ -93,11 +93,12 @@
         <h2>о нас</h2>
         <div class="row text-block">
         <div class="col-lg-6 col-md-6 col-sm-12 first-text-block">
-          <p>Altyn pool создан сообществом майнеров для майнеров. У нас есть четкое понимание важности децентрализованности сети, а также осознание того, что Казахстан становится ключевым регионом в майнинге, а локальный пул должен вывести индустрию на новый уровень.</p>
-          <p>Наш пул имеет представительства в Нур-Султане, Гонконге и Минске. Мы занимаемся не только майнингом, но и разработкой ПО в области майнинга и криптовалют. Мы не останавливаемся на достигнутом и постоянно работаем над улучшением наших продуктов.</p>
+          <p>
+            Altyn Pool создан сообществом майнеров. У нас есть четкое понимание важности децентрализованности сети, а также осознание того, что Казахстан становится ключевым регионом в майнинге. Локальный пул должен вывести индустрию на новый уровень и предоставить майнерам со всего мира легкий доступ к ключевым преимуществам региона.</p>
+          <p>Мы занимаемся не только майнингом, но и разработкой ПО в области майнинга и криптовалют. Мы не останавливаемся на достигнутом и постоянно работаем над улучшением наших продуктов.</p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 second-text-block">
-          <p class="first-text">Команда Altyn pool обладает уникальной экспертизой и обширным опытом для того, чтобы предоставить майнерам непрерывный и бесперебойный майнинг, а также удобную точку входа для сотрудничества с Казахстаном.</p>
+          <p class="first-text">Команда Altyn Pool обладает уникальной экспертизой и обширным опытом для того, чтобы предоставить майнерам непрерывный и бесперебойный майнинг, а также удобную точку входа для сотрудничества с Казахстаном.</p>
           <button onclick="location.href='#contact-us';">Присоединиться</button>
         </div>
         </div>
@@ -113,7 +114,7 @@
                 <p>консалтинг</p>
                <div class="middle-line "></div>
               </div>
-              <p class="card-content">Оказываем услуги консалта для майнеров, дата центров и инвесторов. Мы поможем найти оптимальное решение на любой ваш запрос, благодаря большой сети контактов мы всегда сможем подобрать необходимые компетенции.</p>
+              <p class="card-content">Оказываем услуги консалта для майнеров, дата центров и инвесторов. Мы поможем найти оптимальное решение на любой ваш запрос, а также окажем помощь в поиске инвесторов и привлечении майнеров в ваш дата центр. Благодаря большой сети контактов мы всегда сможем подобрать необходимые компетенции.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
@@ -122,7 +123,7 @@
                 <p>майнинг пул</p>
                <div class="middle-line "></div>
               </div>
-              <p class="card-content">Квалифицированная команда использует лучшие мировые решения для обеспечения стабильной работы и высокого лайк-рейта. Сервера в Казахстане и круглосуточная поддержка повысят не только  профит, но и удобство от использования.</p>
+              <p class="card-content">Квалифицированная команда использует лучшие мировые решения для обеспечения стабильной работы и высокого лайк-рейта. Широкая сеть серверов по всему миру, в том числе и в Казахстане, а также круглосуточная поддержка повысят не только  профит, но и удобство от использования.</p>
             </div>
           </div>
         </div>
@@ -160,8 +161,8 @@
                 <p>поддержка монет</p>
                <div class="middle-line "></div>
               </div>
-              <p class="card-content">Altyn pool позволяет майнить три основные ведущие валюты: BTC, LTC и ETH.
-Мы постоянно анализируем рынок майнинга для последующего увеличения количества доступных монет для добычи.</p>
+              <p class="card-content">Пул Altyn поддерживает основные майнинг алгоритмы: SHA-256, Scrypt и Equihash.
+                Мы постоянно анализируем рынок майнинга для последующего увеличения количества доступных монет для добычи.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
@@ -170,7 +171,7 @@
                 <p>объединенный майнинг</p>
                <div class="middle-line "></div>
               </div>
-              <p class="card-content">Объединенный майнинг (Merged mining) позволяет добывать две или более криптовалюты одновременно, без ущерба для общей производительности майнинга. На данный момент доступен объединенный майнинг LTC + DOGE.</p>
+              <p class="card-content">Объединенный майнинг (Merged mining) позволяет добывать две или более криптовалюты одновременно, без ущерба для общей производительности майнинга.</p>
             </div>
           </div>
         </div>
@@ -181,7 +182,7 @@
                 <p>методы выплат</p>
                <div class="middle-line "></div>
               </div>
-              <p class="card-content">Наш пул поддерживает самые надежные методы выплат майнерам: FPPS и PPLNS, а также предоставляет возможность автоматических выплат один раз в день с регулируемым порогом вывода. </p>
+              <p class="card-content">Наш пул поддерживает самые надежные методы выплат майнерам: FPPS и PPLNS, а также предоставляет возможность автоматических выплат один раз в день с регулируемым порогом вывода.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
@@ -190,7 +191,7 @@
                 <p>местная поддержка</p>
                <div class="middle-line "></div>
               </div>
-              <p class="card-content">В качестве поддержки клиентов из Казахстана мы устанавливаем нулевую комиссию на майнинг. Наш пул не взимает комиссий с казахских майнеров.</p>
+              <p class="card-content">В качестве поддержки клиентов из Казахстана мы устанавливаем нулевую комиссию на майнинг. Наш пул не взимает комиссий с казахских майнеров. Для получения специальных условий оставьте заявку через форму обратной связи ниже.</p>
             </div>
           </div>
         </div>
@@ -204,7 +205,7 @@
               <p class="card-content">Наша ценность - наши клиенты. Для крупных майнеров мы предоставляем целый набор сервисов и привилегий, а для простоты их использования личный менеджер будет с вами  24/7.</p>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <!-- <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
                 <p>обмен валют</p>
@@ -212,7 +213,7 @@
               </div>
               <p class="card-content">Интегрированная P2P платформа позволяет осуществлять автоматический обмен альткойнов в BTC и USDT. Наш P2P обменник – это абсолютно легальный сервис с круглосуточной поддержкой, мы используем надежные кошельки зарекомендовавшего себя – BitGo.</p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -280,29 +281,67 @@
       </div>
     </section>
     <section class="footer-section">
-    <footer>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
-            <img src="../img/circle.svg" class="footer_circle_img" width="4%" style="padding-bottom: 14px;" alt="">
-            <p>Altyn pool official<br>Copyright, 2021</p>
-            <img src="../img/object_mobile_top.png" class="mobile_img_footer" width="270px"  alt="">
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-12 footer-menu">
-            <div class="row"  style="margin-top: 50px">
-              <div class="col-lg-6 col-md-6 col-sm-6">
-                <a href="#about-us">О нас</a>
-                <a href="#our-services">Сервисы</a>
+      <footer>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-12">
+              <!-- <img src="img/circle.svg" class="footer_circle_img" width="4%" style="padding-bottom: 14px;" alt=""> -->
+              <a class="navbar-brand" href="#"><img src="img/circle.svg" width="27px" alt=""> altyn pool</a>
+              <p class="footer-description">Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official </p>
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-12 footer-menu" >
+              <div class="row" >
+                <div class="col-lg-4 col-md-4 col-sm-12 first-footer-nav">
+                  <div class="column-one">
+                    <p class="menu-header">Пул</p>
+                    <a href="">Sha-256</a>
+                    <a href="">Scrypt</a>
+                    <a href="">Equihash</a>
+                  </div>
+                <div class="column-two">
+                  <p class="menu-header">Прошивки</p>
+                  <a href="">Bitmain S9 i/j</a>
+                  <a href="">Bitmain S17+/E/Pro</a>
+                  <a href="">Bitmain T9+</a>
+                  <a href="">Bitmain T17+/E</a>
+                  <a href="">Bitmain L3+</a>
+                </div>
               </div>
-              <div class="col-lg-6 col-md-6 col-sm-6 second-footer-nav">
-                <a href="#why-us">Почему Altyn?</a>
-                <a href="#contacts">Контакты</a>
+                <div class="col-lg-3 col-md-3 col-sm-12 second-footer-nav">
+                  <div class="column-one">
+                    <p class="menu-header">Соц. сети</p>
+                    <a href="https://t.me/altynpool" target="__blank">Telegram</a>
+                    <a href="">Facebook</a>
+                    <a href="">Twitter</a>
+                    <!-- <a href="">Medium</a> -->
+                    <!-- <a href="">Reddit</a> -->
+                  </div>
+                  <div class="column-two">
+                    <p class="menu-header">Навигация</p>
+                    <a href="#about-us">О нас</a>
+                    <a href="#our-services">Сервисы</a>
+                    <a href="#why-us">Пул</a>
+                    <a href="#contacts">Контакты</a>
+                  </div>
+                <!-- <div class="column-two">
+                  <p>Contacts</p>
+                  <p>For press<a href="">press@altynpool.com</a></p>
+                  <p>Tech support<a href=""></a>support@altynpool.com</p>
+                  <p>For data-centers<a href=""></a>dc@altynpool.com</p>
+                </div>   -->
+              </div>            
+                <div class="col-lg-5 col-md-5 col-sm-12 third-footer-nav">
+                  <p class="menu-header">Контакты</p>
+                  <div class="email-block"><p>Пресса: </p> <a href="mailto:press@altynpool.com" target="__blank">press@altynpool.com</a></div>
+                  <div class="email-block"><p>Техподдержка: </p> <a href="mail:support@altynpool.com" target="__blank">support@altynpool.com</a></div>
+                  <div class="email-block"><p>Для дата-центров: </p> <a href="mail:support@altynpool.com" target="__blank">hosting@altynpool.com</a></div>
+                </div>
+              </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
   </section>
       <script>
     function openNav() {
