--- a/ru/main.html
+++ b/ru/main.html
@@ -81,8 +81,8 @@
             <img src="../img/object_mobile_top.png" class="main-img-mobile" alt="">
             <img src="../img/obj_main_3.png" class="main_img" alt="">
           </div>
-          <div class="col-lg-5 col-md-7 col-sm-12 text-block">
-            <h1>Майним вместе<br>пока солнце<br>высоко</h1>
+          <div class="col-lg-5 col-md-7 col-sm-12 text-block" style="margin-top: 30px;">
+            <h1>Подъем уровня<br>майнинга</h1>
             <button class="yellow-button" onclick="location.href='#contact-us';">Начать майнить</button>
           </div>
         </div>
@@ -274,8 +274,8 @@
         </form>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <img src="../img/circle.svg" class="img_circle" width="200px" style="z-index:5; right: 100; top: 3700; position: absolute;" alt="">
-            <img src="../img/object_contact.png" class="img_full" width="610px" style="z-index: 4; right:0; top: 3600; position: absolute;"  alt="">
+            <img src="../img/circle.svg" class="img_circle" width="200px" style="z-index:5; right: 100; top: 3250; position: absolute;" alt="">
+            <img src="../img/object_contact.png" class="img_full" width="610px" style="z-index: 4; right:0; top: 3150; position: absolute;"  alt="">
           </div>
         </div>
       </div>
