--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               
           </div>
           <div class="col-lg-5 col-md-7 col-sm-12 text-block" style="margin-top: 30px;">
-            <h1>Rising the<br>mining level</h1>
+            <h1>Raising the<br>mining level</h1>
             <button class="yellow-button" onclick="location.href='#contact-us';">Start mining</button>
           </div>
         </div>
