--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
                 <div class="column-one">
                   <p class="menu-header">Social</p>
                   <a href="https://t.me/altynpool" target="__blank">Telegram</a>
-                  <a href="">Facebook</a>
-                  <a href="">Twitter</a>
+                  <a href="https://www.facebook.com/AltynPool-108209021533254">Facebook</a>
+                  <a href="https://twitter.com/altynpool">Twitter</a>
                   <!-- <a href="">Medium</a> -->
                   <!-- <a href="">Reddit</a> -->
                 </div>
