--- a/ru/main.html
+++ b/ru/main.html
@@ -286,7 +286,7 @@
           <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12">
               <!-- <img src="img/circle.svg" class="footer_circle_img" width="4%" style="padding-bottom: 14px;" alt=""> -->
-              <a class="navbar-brand" href="#"><img src="img/circle.svg" width="27px" alt=""> altyn pool</a>
+              <a class="navbar-brand" href="#"><img src="../img/circle.svg" width="27px" alt=""> altyn pool</a>
               <p class="footer-description">Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official </p>
             </div>
             <div class="col-lg-8 col-md-8 col-sm-12 footer-menu" >
@@ -311,8 +311,8 @@
                   <div class="column-one">
                     <p class="menu-header">Соц. сети</p>
                     <a href="https://t.me/altynpool" target="__blank">Telegram</a>
-                    <a href="">Facebook</a>
-                    <a href="">Twitter</a>
+                    <a href="https://www.facebook.com/AltynPool-108209021533254">Facebook</a>
+                    <a href="https://twitter.com/altynpool">Twitter</a>
                     <!-- <a href="">Medium</a> -->
                     <!-- <a href="">Reddit</a> -->
                   </div>
