--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <link rel="canonical" href="https://altynpool.com/"> 
         <link rel="shortcut icon" href="img/favicon.ico"> 
-        <meta name="yandex-verification" content="90f5fe3de4132339" />
+
+        <title>Altyn pool: mining pool for bitcoin, litecoin and ethereum  mining </title>
+        <meta name="description" content="Kazakh mining pool where you can mine bitcoin (BTC), Litecoin (LTC), Etherium (ETH) Data centers and hosting for mining in Kazakhstan">
+        <meta name="keywords" content="mining pool kazakhstan, pool mining, mining pools">
+        <meta property="og:site_name" content="Altyn pool: mining pool for bitcoin, litecoin and ethereum mining">
+        <meta property="og:type" content="site">
+        <meta property="og:title" content="Altyn pool">
+        <meta property="og:url" content="https://altynpool.com/ru/main.html">
+        
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="preconnect" href="https://www.googletagmanager.com/">
+
         <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
           new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -322,11 +331,13 @@
           <div class="col-lg-4 col-md-4 col-sm-12">
             <!-- <img src="img/circle.svg" class="footer_circle_img" width="4%" style="padding-bottom: 14px;" alt=""> -->
             <a class="navbar-brand" href="#"><img src="img/circle.svg" width="27px" alt=""> altyn pool</a>
-            <p class="footer-description">Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official </p>
+            <p class="footer-description">Kazakh mining pool for Bitcoin (BTC), Litecoin (LTC), Etherium (ETH) mining.
+              Firmware for popular ASIC miners.
+              Data centers for mining equipment placement in Kazakhstan.</p>
           </div>
           <div class="col-lg-8 col-md-8 col-sm-12 footer-menu" >
             <div class="row" >
-              <div class="col-lg-4 col-md-4 col-sm-12 first-footer-nav">
+              <div class="col-lg-3 col-md-3 col-sm-12 first-footer-nav">
                 <div class="column-one">
                   <p class="menu-header">Pool</p>
                   <a href="">Sha-256</a>
@@ -365,7 +376,7 @@
                 <p>For data-centers<a href=""></a>dc@altynpool.com</p>
               </div>   -->
             </div>            
-              <div class="col-lg-5 col-md-5 col-sm-12 third-footer-nav">
+              <div class="col-lg-6 col-md-6 col-sm-12 third-footer-nav">
                 <p class="menu-header">Contacts</p>
                 <div class="email-block"><p>For press: </p> <a href="mailto:press@altynpool.com" target="__blank">press@altynpool.com</a></div>
                 <div class="email-block"><p>Tech support: </p> <a href="mail:support@altynpool.com" target="__blank">support@altynpool.com</a></div>
