--- a/ru/main.html
+++ b/ru/main.html
@@ -7,7 +7,14 @@
         <link rel="canonical" href="https://altynpool.com/"> 
         <link rel="shortcut icon" href="../img/favicon.ico"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <title></title>
+        <title>Altyn pool:  майнинг пул по добыче биткоина, лайткоина и эфириума</title>
+        <meta name="description" content="Казахский майнинг пул где можно майнить bitcoin (BTC), Litecoin (LTC), Etherium (ETH) Дата центры и хостинги для майнинга в Казахстане">
+        <meta name="keywords" content="майнинг пул казахстан, майнинг на пуле, пулы для майнинга">
+        <meta property="og:site_name" content="Altyn pool:  майнинг пул по добыче биткоина, лайткоина и эфириума">
+        <meta property="og:type" content="site">
+        <meta property="og:title" content="Altyn pool">
+        <meta property="og:url" content="https://altynpool.com/ru/main.html">
+        
         <meta name="description" content="Mining software solutions - best mining firmware"> 
         <link rel="alternate" hreflang="ru" href="https://altynpool.com/ru/main.html"> 
         <link rel="stylesheet" type="text/css" href="../css/responsive.css"> 
@@ -287,7 +294,8 @@
             <div class="col-lg-4 col-md-4 col-sm-12">
               <!-- <img src="img/circle.svg" class="footer_circle_img" width="4%" style="padding-bottom: 14px;" alt=""> -->
               <a class="navbar-brand" href="#"><img src="../img/circle.svg" width="27px" alt=""> altyn pool</a>
-              <p class="footer-description">Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official Altyn pool official </p>
+              <p class="footer-description">Казахский майнинг пул по добыче bitcoin (BTC), Litecoin (LTC), Etherium (ETH) Создание прошивок популярных для ASIC майнеров 
+                Помощь в поиске дата центров для размещения  майнинг оборудования в Казахстане.</p>
             </div>
             <div class="col-lg-8 col-md-8 col-sm-12 footer-menu" >
               <div class="row" >
