--- a/ru/index.html
+++ b/ru/index.html
@@ -14,7 +14,6 @@
         <meta property="og:type" content="site">
         <meta property="og:title" content="Altyn pool">
         <meta property="og:url" content="https://altynpool.com/ru/main.html">
-        
         <meta name="description" content="Mining software solutions - best mining firmware"> 
         <link rel="alternate" hreflang="ru" href="https://altynpool.com/ru/main.html"> 
         <link rel="stylesheet" type="text/css" href="../css/responsive.css"> 
@@ -294,7 +293,7 @@
             <div class="col-lg-4 col-md-4 col-sm-12">
               <!-- <img src="img/circle.svg" class="footer_circle_img" width="4%" style="padding-bottom: 14px;" alt=""> -->
               <a class="navbar-brand" href="#"><img src="../img/circle.svg" width="27px" alt=""> altyn pool</a>
-              <p class="footer-description">Казахский майнинг пул по добыче bitcoin (BTC), Litecoin (LTC), Etherium (ETH) Создание прошивок популярных для ASIC майнеров 
+              <p class="footer-description">Казахский майнинг пул по добыче bitcoin (BTC), Litecoin (LTC), Etherium (ETH). Создание прошивок популярных для ASIC майнеров. 
                 Помощь в поиске дата центров для размещения  майнинг оборудования в Казахстане.</p>
             </div>
             <div class="col-lg-8 col-md-8 col-sm-12 footer-menu" >
