--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <link rel="canonical" href="https://altynpool.com/"> 
-        <link rel="shortcut icon" href="img/favicon.ico"> 
-
+        <link rel="icon" href="img/favicon.ico"  type="image/x-icon"> 
         <title>Altyn pool: mining pool for bitcoin, litecoin and ethereum  mining </title>
-        <meta name="description" content="Kazakh mining pool where you can mine bitcoin (BTC), Litecoin (LTC), Etherium (ETH) Data centers and hosting for mining in Kazakhstan">
+        <meta name="description" content="Kazakh mining pool for Bitcoin (BTC), Litecoin (LTC), Ethereum (ETH) mining. Data centers and hosting for mining in Kazakhstan">
         <meta name="keywords" content="mining pool kazakhstan, pool mining, mining pools">
         <meta property="og:site_name" content="Altyn pool: mining pool for bitcoin, litecoin and ethereum mining">
         <meta property="og:type" content="site">
         <meta property="og:title" content="Altyn pool">
-        <meta property="og:url" content="https://altynpool.com/ru/main.html">
-        
+        <meta property="og:url" content="https://altynpool.com">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="preconnect" href="https://www.googletagmanager.com/">
-
         <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
           new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -25,8 +22,6 @@
           'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
           })(window,document,'script','dataLayer','GTM-T9ZFBXV');</script>
         <!-- End Google Tag Manager --> 
-        <title>Mining software solutions - best mining firmware</title>
-        <meta name="description" content="Mining software solutions - best mining firmware"> 
         <link rel="alternate" hreflang="en" href="https://altynpool.com"> 
         <link rel="stylesheet" type="text/css" href="css/responsive.css"> 
         <link rel="stylesheet" type="text/css" href="css/style.css"> 
@@ -61,8 +56,9 @@
               <div class="dropdown">
                 <button onclick="dropdownOnClick()" id="lang-btn" class="language-btn">English <img id="lang-carret" src="img/caret-down.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
                 <div id="myDropdown" class="dropdown-content">
-                  <a href="index.html">English</a>
-                  <a href="ru/main.html">Русский</a>
+                  <a href="https://altynpool.com/index.html">English</a>
+                  <a href="https://altynpool.com/ru/index.html">Русский</a>
+                  <a href="https://altynpool.com/kz/index.html">Қазақ</a>
                 </div>
               </div>
             </div>
@@ -80,10 +76,11 @@
       </div>
       <div class="slidenav-menu">
         <div class="dropdown-m">
-          <button onclick="dropdownOnClick_mobile()" id="lang-btn-m" class="language-btn-m">English  <img id="lang-carret-m" src="img/caret-down-black.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
+          <button onclick="dropdownOnClick_mobile()" id="lang-btn-m" class="language-btn-m">Русский  <img id="lang-carret-m" src="img/caret-down-black.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
           <div id="myDropdown-m" class="dropdown-content-m">
-            <a href="index.html">English</a>
-            <a href="ru/main.html">Русский</a>
+            <a href="https://altynpool.com/index.html">English</a>
+            <a href="https://altynpool.com/ru/index.html">Русский</a>
+            <a href="https://altynpool.com/kz/index.html">Қазақ</a>
           </div>
         </div>
         <a onclick="closeNav()" class="mobile-nav-link" href="#about-us">About Us</a>
@@ -275,21 +272,26 @@
             </h2>
             <p>Altyn pool is a secure product. We care about the confidentiality of our clients, contact us if you want to connect to our service or get advice.</p>
             <form action="">
+              	<!-- Hidden Required Fields -->
+                <input type="hidden" name="project_name" value="altynpool.com">
+                <input type="hidden" name="admin_email" value="info@altynpool.com">
+                <input type="hidden" name="form_subject" value="Altyn pool request">
+                <!-- END Hidden Required Fields -->
             <div class="input-inner form-floating">
-              <input type="email" class="form-control" id="floatingInputEmail" name="email" placeholder="Email *" required>
+              <input type="email" class="form-control" id="floatingInputEmail" name="Email" placeholder="Email *" required>
               <label for="floatingInputEmail">Email *</label>
             </div>
             <div class="input-inner form-floating">
-              <input type="name" class="form-control" id="floatingInputName" name="name" placeholder="Full name *" required>
+              <input type="name" class="form-control" id="floatingInputName" name="Name" placeholder="Full name *" required>
               <label for="floatingInputEmail">Full name *</label>
             </div>
             <div class="input-inner form-floating">
-              <input type="name" class="form-control" id="floatingInputCompanyName" name="name" placeholder="Company name" required>
-              <label for="floatingInputEmail">Messenger contact</label>
+              <input type="name" class="form-control" id="floatingInputCompanyName" name="Phone_number" placeholder="Phone number">
+              <label for="floatingInputEmail">Phone number</label>
             </div>
             <div class="row input-double-inner">
               <div class="col-lg-6 col-md-6 col-sm-12 select-block">
-                <select name="location" id="">
+                <select name="Location" id="">
                   <option selected>LOCATION</option>
                   <option value="Asia">Asia</option>
                   <option value="Europe">Europe</option>
@@ -300,11 +302,10 @@
                 </select>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-12 select-block">
-                <select name="interest" id="">
+                <select name="Interest" id="">
                   <option selected>INTEREST</option>
                   <option value="Cryptocurrency mining">Cryptocurrency mining</option>
-                  <option value="Crypto exchange">Crypto exchange</option>
-                  <option value="Equipment placement">Equipment placement</option>
+                  <!-- <option value="Equipment placement">Equipment placement</option> -->
                   <option value="Firmware manufacturing">Firmware manufacturing</option>
                   <option value="Мining investments">Мining investments</option>
                   <option value="Мining pool">Мining pool</option>
@@ -312,7 +313,7 @@
               </div>
             </div>
             <div class="input-inner-message">
-              <textarea type="text" style="overflow: hidden !important;" name="text" id="floatingTextareaMsg"  placeholder="Message" onkeyup="textAreaAdjust(this)" ></textarea>
+              <textarea type="text" style="overflow: hidden !important;" name="Message" id="floatingTextareaMsg"  placeholder="Message" onkeyup="textAreaAdjust(this)" ></textarea>
             </div>
             <button type="submit" value="submit" class="yellow-button">send</button>
           </form>
